# lenavire-contribution-rust

./: Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
migrations/2025-03-15-012554_create_expense/: up.sql
migrations/2025-03-15-012706_create_payment/: up.sql
migrations/2025-03-15-185553_change_to_decimal/: down.sql  up.sql
migrations/2025-03-15-192332_change_amount_type/: down.sql  up.sql
migrations/2025-03-15-214430_change_type_amount/: up.sql
migrations/2025-03-15-214737_change_amount_type/: up.sql
src/: lib.rs  main.rs  schema.rs
src/ledger/application/commands/: mod.rs
src/ledger/application/ports/: date_provider.rs  event_streams.rs  expense_repository.rs  id_provider.rs  mod.rs  payment_repository.rs
src/ledger/application/queries/: get_expenses_data_query.rs  mod.rs
src/ledger/domain/entities/: expense.rs  mod.rs  payment.rs
src/ledger/domain/value_objects/: amount.rs
src/ledger/infrastructure/: mod.rs  web.rs  websocket.rs
src/ledger/infrastructure/adapters/: fixed_date_provider.rs  fixed_id_provider.rs  in_memory_event_stream.rs  in_memory_expense_repository.rs  in_memory_payment_repository.rs  mod.rs  postgre_expense_repository.rs  postgre_payment_repository.rs  real_date_provider.rs  real_id_provider.rs  websocket_event_stream.rs
src/ledger/infrastructure/db/: mod.rs  postgre_expense.rs  postgre_payment.rs
src/ledger/presentation/controllers/: add_expense_body.rs  mod.rs  payment_received_body.rs  payments_controller.rs
src/ledger/presentation/routes/: mod.rs  payment_routes.rs
(+5 files in other folders)
