[package]
name = "lenavire-contribution-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
async-trait = "0.1.87"
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.8", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.11.7"
log = "0.4.26"
mockall = "0.11"
r2d2 = "0.8.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
tokio-tungstenite = "*"
futures = "0.3"
parking_lot = "0.12"
actix-cors = "0.7.1"
futures-util = "0.3.31"
actix-web-actors = "4.3.1"
actix = "0.13.5"
socketioxide = "0.16.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[build]
target = "aarch64-apple-darwin"

[target.aarch64-apple-darwin]
rustflags = [
    "-L", "/usr/local/opt/libpq/lib",
    "-L", "/usr/local/Cellar/libpq/17.4/lib",
    "-l", "dylib=pq"
]
